--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ div class {text-align: center;}
 
                    
                     <div class="show_about_buttons">
-                                                        <a href="directions.html">
+                                                        <a href="https://dhsproductions.github.io/directions.html">
                                 <div class="show_about_button directions_button" style="width:100%;">
                                     <i class="fa fa-map-marker"></i> Get Directions                                    </div>
                             </a>
