--- a/index.html
+++ b/index.html
@@ -917,22 +917,22 @@ g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
             events: [                            {
                             title: decodeEntities('DHS Hairspray'),
                             start: '2025-04-03 19:00',
-                                                                url: 'https://dhsproductionsouam.ludus.com/index.php?time_id=152608',
+                                                                url: 'https://dhsproductions.github.io',
                                                                                                                         },
                                                 {
                             title: decodeEntities('DHS Hairspray'),
                             start: '2025-04-04 19:00',
-                                                                url: 'https://dhsproductionsouam.ludus.com/index.php?time_id=152609',
+                                                                url: 'https://dhsproductions.github.io',
                                                                                                                         },
                                                 {
                             title: decodeEntities('DHS Hairspray'),
                             start: '2025-04-05 13:00',
-                                                                url: 'https://dhsproductionsouam.ludus.com/index.php?time_id=152611',
+                                                                url: 'https://dhsproductions.github.io',
                                                                                                                         },
                                                 {
                             title: decodeEntities('DHS Hairspray'),
                             start: '2025-04-05 19:00',
-                                                                url: 'https://dhsproductionsouam.ludus.com/index.php?time_id=152610',
+                                                                url: 'https://dhsproductions.github.io',
                                                                                                                         },
                     ],
             eventRender: function (info) {
